feat: adicionado métodos de atualização e criação de responsáveis